Add message and chat layouts

--- a/app/src/main/res/layout/activity_chat_list.xml
+++ b/app/src/main/res/layout/activity_chat_list.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
+    tools:context=".ChatListActivity">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -20,27 +19,13 @@
             android:layout_height="0dp"
             android:layout_weight="12">
             <ListView
-                android:id="@+id/list_view_messages"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </LinearLayout>
-        <LinearLayout
+        <Button
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:orientation="horizontal">
-            <EditText
-                android:id="@+id/edit_text_message"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="63" />
-            <Button
-                android:id="@+id/button_send_message"
-                android:layout_width="38dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:padding="13dp"
-                android:drawableLeft="@drawable/baseline_send_24" />
-        </LinearLayout>
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="@string/add_server" />
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
