--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:paddingLeft="64dp"
     android:paddingRight="64dp"
-    tools:context=".adapters.SignInActivity">
+    tools:context=".activities.SignInActivity">
     <TextView
         android:layout_width="wrap_content"
         android:textSize="20dp"
