--- a/app/src/main/res/layout/activity_chat_list.xml
+++ b/app/src/main/res/layout/activity_chat_list.xml
@@ -12,12 +12,14 @@
         android:layout_height="0dp"
         android:layout_weight="12">
         <ListView
+            android:id="@+id/list_view_chats"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
     <Button
+        android:id="@+id/button_add_chat"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:text="@string/add_room" />
+        android:text="@string/add_chat" />
 </LinearLayout>
