--- a/app/src/main/res/layout/activity_create_chat.xml
+++ b/app/src/main/res/layout/activity_create_chat.xml
@@ -6,11 +6,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.ChatListActivity">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/App.Header"
+        android:text="@string/add_chat" />
     <EditText
         android:id="@+id/edit_text_search_username"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:inputType="text"
+        android:maxLines="1"
         android:hint="@string/username" />
     <LinearLayout
         android:orientation="vertical"
