--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -18,11 +18,15 @@
         android:text="@string/sign_in"/>
     <EditText
         android:id="@+id/edit_text_signin_username"
+        android:inputType="text"
+        android:maxLines="1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/username" />
     <EditText
         android:id="@+id/edit_text_signin_password"
+        android:inputType="text"
+        android:maxLines="1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/password" />
@@ -37,5 +41,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="86dp"
         android:text="@string/has_no_account_yet" />
 </LinearLayout>
