--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -20,16 +20,22 @@
         android:id="@+id/edit_text_signup_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="text"
+        android:maxLines="1"
         android:hint="@string/username" />
     <EditText
         android:id="@+id/edit_text_signup_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="text"
+        android:maxLines="1"
         android:hint="@string/password" />
     <EditText
         android:id="@+id/edit_text_signup_password_confirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="text"
+        android:maxLines="1"
         android:hint="@string/confirm_password" />
     <Button
         android:id="@+id/button_sign_up"
@@ -42,5 +48,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="86dp"
         android:text="@string/already_has_account" />
 </LinearLayout>
