--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,11 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="text_primary">#FF000000</color>
-    <color name="text_secondary">#FF555555</color>
+    <color name="text_primary_dim">#FF444444</color>
+    <color name="text_secondary">#FFEEEEEE</color>
+    <color name="text_secondary_dim">#FF777777</color>
+    <color name="bg_primary">#3d3f8e</color>
+    <color name="bg_primary_light">#6265e3</color>
+    <color name="bg_primary_dim">#181939</color>
+    <color name="bg_secondary">#8e3d80</color>
 </resources>
