--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,13 +3,18 @@
     <style name="Base.Theme.Android_exam" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:textColor">@color/text_primary</item>
     </style>
 
     <style name="App.MessageCard" parent="ShapeAppearance.Material3.SmallComponent">
-        <item name="android:textColor">@color/design_default_color_on_primary</item>
-        <item name="android:background">@drawable/rounded_card</item>
-        <item name="cornerRadius">16dp</item>
-        <item name="colorSurface">@color/design_default_color_primary</item>
+        <item name="android:textColor">@color/text_secondary</item>
+    </style>
+
+    <style name="App.Header" parent="ShapeAppearance.Material3.SmallComponent">
+        <item name="android:textSize">28dp</item>
+        <item name="android:padding">12dp</item>
+        <item name="android:background">@color/bg_primary_dim</item>
+        <item name="android:textColor">@color/text_secondary</item>
     </style>
 
     <style name="Theme.Android_exam" parent="Base.Theme.Android_exam" />
