Update and fix layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,11 @@
         android:layout_height="0dp"
         android:layout_weight="12">
         <ListView
+            android:padding="8dp"
+            android:transcriptMode="alwaysScroll"
+            android:divider="@android:color/transparent"
+            android:listSelector="@android:color/transparent"
+            android:cacheColorHint="@android:color/transparent"
             android:id="@+id/list_view_messages"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
@@ -39,6 +44,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:padding="13dp"
+            style="@style/App.Button"
             android:drawableLeft="@drawable/baseline_send_24" />
     </LinearLayout>
 </LinearLayout>
