--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -42,6 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        style="@style/App.Button"
         android:text="@string/sign_up"/>
     <TextView
         android:id="@+id/text_view_has_account"
@@ -49,5 +50,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="86dp"
+        style="@style/App.Link"
         android:text="@string/already_has_account" />
 </LinearLayout>
