--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -35,6 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        style="@style/App.Button"
         android:text="@string/sign_in"/>
     <TextView
         android:id="@+id/text_view_has_no_account"
@@ -42,5 +43,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="86dp"
+        style="@style/App.Link"
         android:text="@string/has_no_account_yet" />
 </LinearLayout>
