--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,11 +10,19 @@
         <item name="android:textColor">@color/text_secondary</item>
     </style>
 
+    <style name="App.Button" parent="Widget.Material3.Button">
+        <item name="backgroundTint">@color/bg_primary</item>
+    </style>
+
     <style name="App.Header" parent="ShapeAppearance.Material3.SmallComponent">
         <item name="android:textSize">28dp</item>
         <item name="android:padding">12dp</item>
         <item name="android:background">@color/bg_primary_dim</item>
         <item name="android:textColor">@color/text_secondary</item>
+    </style>
+
+    <style name="App.Link" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/bg_primary_light</item>
     </style>
 
     <style name="Theme.Android_exam" parent="Base.Theme.Android_exam" />
